# BML_model

./: README.md
BML_omp/: CMakeLists.txt  README.md  build.sh  problem.csv  run.sh
BML_omp/include/: dense_matrix.h  hybrid_matrix.h  in_out_functions.h  sparse_matrix.h
BML_omp/source/: dense_matrix.cpp  dense_matrix.cpp~  hybrid_matrix.cpp  hybrid_matrix.cpp~  in_out_functions.cpp  main.cpp  main.cpp~  sparse_matrix.cpp  sparse_matrix.cpp~
BML_seriale/: CMakeLists.txt  README.md~  build.sh  comprimi.sh  run.sh  run.sh~
BML_seriale/include/: dense_matrix.h  hybrid_matrix.h  in_out_functions.h  sparse_matrix.h
BML_seriale/source/: dense_matrix.cpp  dense_matrix.cpp~  hybrid_matrix.cpp  hybrid_matrix.cpp~  in_out_functions.cpp  main.cpp~  sparse_matrix.cpp  sparse_matrix.cpp~
problem/: DeleteBigMatrix.cpp  DeleteBigMatrix.cpp~  DeleteBigMatrix_OMP.cpp  DeleteBigMatrix_OMP.cpp~  WriteMatrix.cpp~  WriteMatrix_OMP.cpp  WriteMatrix_OMP.cpp~  problem.sh  problem_omp.sh
